# AelkynECSPrototype

./: Cargo.toml  build.rs
assets/models/: firstmob.glb  firstmon.glb
shader/: main.slang
shader/compiled/: main_frag.spv  main_vert.spv
src/: main.rs
src/ecs/: component_store.rs  entities.rs  mod.rs  player.rs  resource.rs  world.rs
src/ecs/components/: health.rs  mesh_index.rs  mod.rs  tag.rs  transform.rs
src/ecs/resources/: camera.rs  input.rs  mod.rs  time.rs
src/engine/: app.rs
src/gpu/: allocator.rs  buffer.rs  descriptors.rs  device.rs  egui_renderer.rs  gltf_loader.rs  mod.rs  pipeline.rs  renderer.rs  swapchain.rs  sync.rs  texture.rs  utils.rs
src/systems/: camera_system.rs
