[package]
name = "GameAelkeynPrototype"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.33.3"
egui-ash-renderer = { version = "0.11", features = ["dynamic-rendering", "gpu-allocator"] }
glam = "0.32.1"
gltf = "1.4.1"
gpu-allocator = "0.28.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
tracing = "0.1.44"
winit = "0.30.13"
